--- a/datasourcetool/src/main/resources/application.yml
+++ b/datasourcetool/src/main/resources/application.yml
@@ -6,9 +6,9 @@ spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
     type: com.alibaba.druid.pool.DruidDataSource
-    url: jdbc:mysql://127.0.0.1:3306
-    username: root
-    password: root
+    url: jdbc:mysql://10.201.103.154:3306/cimsdbsit?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&useSSL=false
+    username: cimssit
+    password: Cims#2019
   resources:
     static-locations:
     - classpath:/static/html/
